# UrbanIntelligenceEnvironment

./: CMakeLists.txt  README.md  UrIntEnv_it_IT.ts
icons/: icons.qrc
include/: annotationrelationshipdialog.hpp  annotationselectiondialog.hpp  attributewidget.hpp  categorybutton.hpp  mainwindow.hpp  measureslistwidget.hpp  semanticattributedialog.hpp
include/VTKInteractorStyles/: annotationselectioninteractorstyle.hpp  lineselectionstyle.hpp  measurestyle.hpp  triangleselectionstyle.hpp  verticesselectionstyle.hpp
src/: annotationdialog.cpp  annotationrelationshipdialog.cpp  annotationrelationshipdialog.ui  annotationselectiondialog.cpp  attributewidget.cpp  categorybutton.cpp  main.cpp  mainwindow.cpp  mainwindow.ui  measureslistwidget.cpp  semanticattributedialog.cpp
src/VTKInteractorStyles/: annotationselectioninteractorstyle.cpp  lineselectionstyle.cpp  measurestyle.cpp  triangleselectionstyle.cpp  verticesselectionstyle.cpp
